--- a/assets/sass/_main-files/_signin/index.sass
+++ b/assets/sass/_main-files/_signin/index.sass
@@ -9,6 +9,11 @@ body
 	font-family: $font_family_all !important
 	color: $gray_60 !important
 	user-select: none
+	height: 100vh
+	height: 100dvh
+	display: grid
+	align-content: center
+	align-items: center
 
 .password-input
 	font-family: inherit !important
